@@ -1,3 +1,5 @@
+* Replace URL entry by a toolbar button
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 * Add support for GTK+ 3.0
